[gd_scene load_steps=7 format=3 uid="uid://cttm14detyota"]

[ext_resource type="Script" path="res://MainMenu/Menu_Button.gd" id="1_qkcqp"]
[ext_resource type="Script" path="res://MainMenu/ScoreScreen.gd" id="1_tiqn7"]
[ext_resource type="Texture2D" uid="uid://dxayij864crvv" path="res://Background.png" id="2_2og7n"]
[ext_resource type="Script" path="res://MainMenu/Scoreboard.gd" id="2_2rus8"]
[ext_resource type="Texture2D" uid="uid://nfgjk0cn0pr6" path="res://score_screen.png" id="4_7u831"]
[ext_resource type="AudioStream" uid="uid://2hjj4587jlam" path="res://Sounds/VictorySound.wav" id="5_crwpn"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tiqn7")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 45.0
grow_vertical = 0

[node name="MenuButton" type="Button" parent="BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"
script = ExtResource("1_qkcqp")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(523, 280)
scale = Vector2(8.72261, 4.83769)
texture = ExtResource("2_2og7n")

[node name="Scoreboard" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -343.0
offset_top = -157.0
offset_right = -53.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
script = ExtResource("2_2rus8")

[node name="Hole1" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="1" type="Label" parent="Scoreboard/Hole1"]
layout_mode = 2
text = "1"

[node name="Par" type="Label" parent="Scoreboard/Hole1"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole1"]
layout_mode = 2
text = "1"

[node name="Hole2" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="2" type="Label" parent="Scoreboard/Hole2"]
layout_mode = 2
text = "2"

[node name="Par" type="Label" parent="Scoreboard/Hole2"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole2"]
layout_mode = 2
text = "1"

[node name="Hole3" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="3" type="Label" parent="Scoreboard/Hole3"]
layout_mode = 2
text = "3"

[node name="Par" type="Label" parent="Scoreboard/Hole3"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole3"]
layout_mode = 2
text = "1"

[node name="Hole4" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="4" type="Label" parent="Scoreboard/Hole4"]
layout_mode = 2
text = "4"

[node name="Par" type="Label" parent="Scoreboard/Hole4"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole4"]
layout_mode = 2
text = "1"

[node name="Hole5" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="5" type="Label" parent="Scoreboard/Hole5"]
layout_mode = 2
text = "5"

[node name="Par" type="Label" parent="Scoreboard/Hole5"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole5"]
layout_mode = 2
text = "1"

[node name="Hole6" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="6" type="Label" parent="Scoreboard/Hole6"]
layout_mode = 2
text = "6"

[node name="Par" type="Label" parent="Scoreboard/Hole6"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole6"]
layout_mode = 2
text = "1"

[node name="Hole7" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="7" type="Label" parent="Scoreboard/Hole7"]
layout_mode = 2
text = "7"

[node name="Par" type="Label" parent="Scoreboard/Hole7"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole7"]
layout_mode = 2
text = "1"

[node name="Hole8" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="8" type="Label" parent="Scoreboard/Hole8"]
layout_mode = 2
text = "8"

[node name="Par" type="Label" parent="Scoreboard/Hole8"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole8"]
layout_mode = 2
text = "1"

[node name="Hole9" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="9" type="Label" parent="Scoreboard/Hole9"]
layout_mode = 2
text = "9"

[node name="Par" type="Label" parent="Scoreboard/Hole9"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole9"]
layout_mode = 2
text = "1"

[node name="Hole10" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="10" type="Label" parent="Scoreboard/Hole10"]
layout_mode = 2
text = "10"

[node name="Par" type="Label" parent="Scoreboard/Hole10"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole10"]
layout_mode = 2
text = "1"

[node name="Hole11" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="11" type="Label" parent="Scoreboard/Hole11"]
layout_mode = 2
text = "11"

[node name="Par" type="Label" parent="Scoreboard/Hole11"]
layout_mode = 2
text = "1"

[node name="Score" type="Label" parent="Scoreboard/Hole11"]
layout_mode = 2
text = "1"

[node name="Totals" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2

[node name="Total" type="Label" parent="Scoreboard/Totals"]
layout_mode = 2
text = "Total"

[node name="ParTotal" type="Label" parent="Scoreboard/Totals"]
layout_mode = 2
text = "1"

[node name="ScoreTotal" type="Label" parent="Scoreboard/Totals"]
layout_mode = 2
text = "1"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(575, 333.75)
scale = Vector2(2.24219, 1.30822)
texture = ExtResource("4_7u831")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(298, 408)
scale = Vector2(1.08339, 0.313519)
color = Color(0.462745, 0, 0.168627, 1)

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_crwpn")

[connection signal="pressed" from="BoxContainer/MenuButton" to="BoxContainer/MenuButton" method="_on_pressed"]
